--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
