--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,6 +1,7 @@
 FROM node:14-alpine3.14
+
 WORKDIR /usr/app
 COPY ./package.json ./
 # RUN npm install -g @angular/cli @angular-devkit/build-angular
-RUN npm install
+RUN npm install --save --legacy-peer-deps
 COPY . .
