--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -2,6 +2,5 @@ FROM node:14-alpine3.14
 
 WORKDIR /usr/app
 COPY ./package.json ./
-# RUN npm install -g @angular/cli @angular-devkit/build-angular
-RUN npm install --save --legacy-peer-deps
-COPY . .
+RUN npm install
+COPY ./ ./
